chips: remove direct style on img tag chips: fix rounded corner background bleed

--- a/src/chips/chips.scss
+++ b/src/chips/chips.scss
@@ -30,6 +30,10 @@ $focus: lighten($ssv-chips-default-color-contrast, 20%);
 		border-radius: 4px;
 		cursor: pointer;
 
+		&.ssv-chips__item---not-static {
+			border-radius: 6px 4px 4px 6px;
+		}
+
 		.ssv-chips__item-image-container {
 			color: $ssv-chips-default-color;
 			border-radius: 4px 0 0 4px;
@@ -39,7 +43,7 @@ $focus: lighten($ssv-chips-default-color-contrast, 20%);
 			width: 32px;
 			height: 32px;
 
-			img {
+			.ssv-chips__item-image {
 				width: 32px;
 				height: 32px;
 				border-radius: 4px 0 0 4px;
